--- a/gb/nf1351518.md
+++ b/gb/nf1351518.md
@@ -1,6 +1,7 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table align=center border="0"><tr><td colspan="3" VALIGN=TOP nowrap><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/11.jpg" title="头条要闻" alt="头条要闻"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/zt.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/13.jpg" title="专题" alt="专题"></a></td></tr><tr><td colspan="3" VALIGN=TOP nowrap><p> <a href="https://github.com/brkhkd3127/www/blob/master/README.md#1" target="_blank">翻墙</a> | <a href="https://gitlab.com/szzdlab/vdwl/raw/master/wl.webm" target="_blank">神话</a> | <a href="https://gitlab.com/szzdlab/vdhG75Ez1eTyeZN/raw/master/hG75Ez1eTyeZN.webm" target="_blank">归途</a> | <a href="https://gitlab.com/szzdlab/vdYongHeng-360p/raw/master/YongHeng-360p.webm" target="_blank">永恒</a> | <a href="https://gitlab.com/szzdlab/vdLijianhui-200804-720/raw/master/Lijianhui-200804-720.webm" target="_blank">回归</a> | <a href="https://gitlab.com/szzdlab/vddmt/raw/master/dmt.webm" target="_blank">江鬼其人</a> | <a href="https://gitlab.com/szzdlab/vdszt/raw/master/szt.webm" target="_blank">寻正道</a> | <a href="https://gitlab.com/szzdlab/vdUc6y/raw/master/Uc6y.webm" target="_blank">渐冻人</a> | <a href="https://gitlab.com/szzdlab/vd425/raw/master/425.webm" target="_blank">四二五</a> | <a href="https://gitlab.com/szzdlab/vdlin-720p/raw/master/lin-720p.webm" target="_blank">世界小姐</a> | <a href="https://gitlab.com/szzdlab/vdwnrl/raw/master/wnrl.webm" target="_blank">为你而来</a> | <a href="https://gitlab.com/szzdlab/vd5Vu3_XS2V/raw/master/5Vu3_XS2V.webm" target="_blank">无罪辩护</a> |  <a href="https://gitlab.com/szzdlab/vdzjmd1_19/raw/master/zjmd1_19.webm" target="_blank">终级目的</a> | <a href="https://gitlab.com/szzdlab/vdmtdwh/raw/master/mtdwh.webm" target="_blank">漫谈党文化</a></p><p><a href="https://gitlab.com/szzdlab/vd9p/raw/master/9p.webm" target="_blank">九评</a> | <a href="https://gitlab.com/szzdlab/vdzfzx/raw/master/zfzx.webm" target="_blank">伪火</a> | <a href="https://gitlab.com/szzdlab/vd1400forge-1210/raw/master/1400forge-1210.webm" target="_blank">剖析</a> | <a href="https://gitlab.com/szzdlab/vd3-JTT_CN_MH-360p/raw/master/3-JTT_CN_MH-360p.webm" target="_blank">旅程</a> | <a href="https://gitlab.com/szzdlab/vd5-YiSu_MH-360p/raw/master/5-YiSu_MH-360p.webm" target="_blank">义诉</a> | <a href="https://gitlab.com/szzdlab/vd5N.8/raw/master/5N.8.webm" target="_blank">活摘调查</a> | <a href="https://gitlab.com/szzdlab/vdTdowhauWx9WiM/raw/master/TdowhauWx9WiM.webm" target="_blank">藏字石</a> | <a href="https://gitlab.com/szzdlab/vd1-Xuezhongmei_MH-360p/raw/master/1-Xuezhongmei_MH-360p.webm" target="_blank">雪中梅</a> | <a href="https://gitlab.com/szzdlab/vdguanguimin/raw/master/guanguimin.webm" target="_blank">歌唱家</a> | <a href="https://gitlab.com/szzdlab/vdhuangxiaomin-tuidang/raw/master/huangxiaomin-tuidang.webm" target="_blank">奥运名将</a> | <a href="https://gitlab.com/szzdlab/vdwm/raw/master/wm.webm" target="_blank">告诉未来</a> | <a href="https://gitlab.com/szzdlab/vdqh/raw/master/qh.webm" target="_blank">清华学子</a> | <a href="https://gitlab.com/szzdlab/vdhongchaoyinmou-hi/raw/master/hongchaoyinmou-hi.webm" target="_blank">红朝阴谋</a> | <a href="https://gitlab.com/szzdlab/vdfy/raw/master/fy.webm" target="_blank">风雨天地行</a></p></td></tr>
 <tr><td VALIGN=TOP width="370" height="1000"><a href="https://github.com/zeqdou3554/djy/blob/master/gb/21/9/3/n13207941.md#1"><img width="320" src="https://i.epochtimes.com/assets/uploads/2021/07/id13103499-150866-320x200.jpg"><p align="center">【疫情9.3】美将投资$30亿 加强疫苗供应链</p></a>
 <a href="https://github.com/zeqdou3554/djy/blob/master/gb/21/9/3/n13207941.md#1" title="【疫情9.3】美将投资2021/07/id13103499-150866-320x200.jpg0亿 加强疫苗供应链""><img width="73" src="https://i.epochtimes.com/assets/uploads/2021/07/id13103499-150866-320x200.jpg">&nbsp;</a>
+<a href="https://github.com/zeqdou3554/djy/blob/master/gb/21/9/2/n13206400.md#1" title="组图二：第九届中国古典舞初赛少年女子组风采""><img width="73" src="https://i.epochtimes.com/assets/uploads/2021/09/id13206656-LDB6462-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/zeqdou3554/djy/blob/master/gb/21/9/3/n13207188.md#1" title="菅义伟表示不竞选自民党总裁 日相将换人""><img width="73" src="https://i.epochtimes.com/assets/uploads/2021/05/id12982617-GettyImages-1233150593-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/zeqdou3554/djy/blob/master/gb/21/8/24/n13183383.md#1" title="【独家】陕西“千人计划”名单曝光""><img width="73" src="https://i.epochtimes.com/assets/uploads/2021/03/shutterstock_1651369351-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/zeqdou3554/djy/blob/master/gb/21/9/2/n13205604.md#1" title="【一线采访】大陆培训机构倒闭 家长维权难""><img width="73" src="https://i.epochtimes.com/assets/uploads/2021/03/GettyImages-107502021-320x200.jpg">&nbsp;</a>
@@ -11,14 +12,13 @@
 <a href="https://github.com/zeqdou3554/djy/blob/master/gb/21/9/2/n13206173.md#1" title="德国大选 主要党派政见速览""><img width="73" src="https://i.epochtimes.com/assets/uploads/2021/09/id13206192-GettyImages-1234990054-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/zeqdou3554/djy/blob/master/gb/21/9/2/n13206019.md#1" title="滴滴京东成立工会 分析：中共加强控制民企""><img width="73" src="https://i.epochtimes.com/assets/uploads/2021/08/id13152687-510989-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/zeqdou3554/djy/blob/master/gb/21/9/2/n13205660.md#1" title="美最高法院裁决 拒阻止德州执行反堕胎法""><img width="73" src="https://i.epochtimes.com/assets/uploads/2021/09/id13206021-GettyImages-1336677302-320x200.jpg">&nbsp;</a>
-<a href="https://github.com/zeqdou3554/djy/blob/master/gb/21/9/2/n13205957.md#1" title="【快讯】第九届全世界中国古典舞大赛开赛""><img width="73" src="https://i.epochtimes.com/assets/uploads/2021/09/id13206102-20210902-dance-competition-NTDTV6-320x200.jpg">&nbsp;</a>
 <p align="center"><a href="https://github.com/zeqdou3554/djy/blob/master/gb/nf4514.md#1">更多头条......</a><hr><h2><p><strong>即时快讯&nbsp;&#160;&nbsp;&#160; :bar_chart: <a target="_blank" href="https://zeqdou3554.github.io/vd/yq.html">全球疫情地图</a></strong></p></h2>
-:clock8: <em>3分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/zeqdou3554/djy/blob/master/gb/21/9/3/n13207941.md#1">【疫情9.3】美将投资$30亿 加强疫苗供应链</a><br>
-:clock8: <em>26分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/zeqdou3554/djy/blob/master/gb/21/9/3/n13207628.md#1">【一线采访】大陆远洋船员披露疫情下真实困境</a><br>
-:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/zeqdou3554/djy/blob/master/gb/21/9/3/n13207767.md#1">奈及利亚奇特村庄 男女说不同的语言</a><br>
-:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/zeqdou3554/djy/blob/master/gb/21/9/3/n13207643.md#1">自由多元远胜孔子学院 台湾华语中心在美揭幕</a><br>
-:clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/zeqdou3554/djy/blob/master/gb/21/9/3/n13207591.md#1">重庆市民打疫苗后死亡 家属遭当局噤声</a><br>
-:clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/zeqdou3554/djy/blob/master/gb/21/9/3/n13207065.md#1">穆迪将中国房地产行业展望下调为负面</a><br>
+:clock8: <em>8分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/zeqdou3554/djy/blob/master/gb/21/9/3/n13207731.md#1">A股震荡收跌 沪深两市成交破1.5万亿元</a><br>
+:clock8: <em>12分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/zeqdou3554/djy/blob/master/gb/21/9/2/n13205272.md#1">创纪录降雨酿44死 纽约新泽西进入紧急状态</a><br>
+:clock8: <em>26分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/zeqdou3554/djy/blob/master/gb/21/9/3/n13207941.md#1">【疫情9.3】美将投资$30亿 加强疫苗供应链</a><br>
+:clock8: <em>31分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/zeqdou3554/djy/blob/master/gb/21/9/2/n13206400.md#1">组图二：第九届中国古典舞初赛少年女子组风采</a><br>
+:clock8: <em>50分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/zeqdou3554/djy/blob/master/gb/21/9/3/n13207628.md#1">【一线采访】大陆远洋船员披露疫情下真实困境</a><br>
+:clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/zeqdou3554/djy/blob/master/gb/21/9/3/n13207767.md#1">奈及利亚奇特村庄 男女说不同的语言</a><br>
 <hr><h2><p><strong>新闻排行</strong></p></h2>
 <a href="https://github.com/zeqdou3554/djy/blob/master/gb/21/9/1/n13201734.md#1">【拍案惊奇】北京发起新文革？三类“斗争对象”</a><br>
 <a href="https://github.com/zeqdou3554/djy/blob/master/gb/21/9/1/n13203664.md#1">黑龙江高校6名学生干部查寝耍官威 引热议</a><br>
@@ -100,24 +100,24 @@
 <a href="https://github.com/zeqdou3554/djy/blob/master/gb/21/8/30/n13197798.md#1">【微视频】封杀赵薇背后 权贵家族资本遭整肃</a><br>
 <a href="https://github.com/zeqdou3554/djy/blob/master/gb/21/8/30/n13197429.md#1">反对中共强制打疫苗 大陆民众遭恐吓威胁</a><br>
 <br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nsc413.md#1">更多要闻......</a></p></td><td VALIGN=TOP rowspan=7 width="156" align="middle"><a href="https://gitlab.com/szzdlab/vdSY-Classical-Chinese-Dance-Technique-Collection-2018/raw/master/SY-Classical-Chinese-Dance-Technique-Collection-2018.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"><br>神韵古典舞表演</a><br><a href="https://gitlab.com/szzdlab/vd9p/raw/master/9p.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/9ping.jpg" title="九评共产党" alt="九评共产党"><br>九评共产党</a><br><a href="https://gitlab.com/szzdlab/vdzjmd1_19/raw/master/zjmd1_19.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"><br>共产主义终极目的</a><br><a href="https://gitlab.com/szzdlab/vdzf-dsp-1128/raw/master/zf-dsp-1128.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/weihuo.jpg" title="中共的伪火骗局"" alt="中共的伪火骗局""><br>中共的伪火骗局"</a><br><a href="https://gitlab.com/szzdlab/vdst5-29/raw/master/st5-29.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/changzhi.jpg" title="古今奇观 藏字石" alt="古今奇观 藏字石"><br>古今奇观 藏字石</a><br><a href="https://gitlab.com/szzdlab/vd3-JTT_CN_MH-360p/raw/master/3-JTT_CN_MH-360p.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"><br>通往天安门的旅程</a><br><a href="https://gitlab.com/szzdlab/vdwl/raw/master/wl.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/weilai.jpg" title="未来人的神话" alt="未来人的神话"><br>未来人的神话故事</a><br><a href="https://gitlab.com/szzdlab/vdhongchaoyinmou-hi/raw/master/hongchaoyinmou-hi.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"><br>中共罪恶的活摘</a><br><a href="https://gitlab.com/szzdlab/vdtzrs/raw/master/tzrs.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/huozhai.jpg" title="铁证如山" alt="铁证如山"><br>铁证如山</a><br><a href="https://gitlab.com/szzdlab/vder3n_3VVJ/raw/master/er3n_3VVJ.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"><br>一家四口死于暴政</a><br><a href="https://gitlab.com/szzdlab/vdXmL0_0XDL2p/raw/master/XmL0_0XDL2p.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"><br>弟妹相继死于迫害</a><br><a href="https://gitlab.com/szzdlab/vdNG8l/raw/master/NG8l.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"><br>她们被中共迫害死</a><br><a href="https://gitlab.com/szzdlab/vdwt6Y_vPhM/raw/master/wt6Y_vPhM.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"><br>双城血泪</a><br><a href="https://gitlab.com/szzdlab/vd5Vu3_XS2V/raw/master/5Vu3_XS2V.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"><br>无罪辩护震撼人心</a><br><a href="https://gitlab.com/szzdlab/vdvG2w_fwq/raw/master/vG2w_fwq.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/6c10-720.jpg" title="中共的迫害与掩盖" alt="中共的迫害与掩盖"><br>中共的迫害与掩盖</a><br><a href="https://gitlab.com/szzdlab/vdO2jN_uD/raw/master/O2jN_uD.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"><br>中共官员的选择</a><br><a href="https://gitlab.com/szzdlab/vd1400forge-1210/raw/master/1400forge-1210.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/1400l.jpg" title="剖析中共造假" alt="剖析中共造假"><br>剖析中共造假</a><br><a href="https://gitlab.com/szzdlab/vdC1WZ_mj/raw/master/C1WZ_mj.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/425.jpg" title="万人上访真相" alt="万人上访真相"><br>万人上访真相</a><br><a href="https://gitlab.com/szzdlab/vdqh/raw/master/qh.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"><br>被迫害的清华学子</a><br><a href="https://gitlab.com/szzdlab/vdJZ5e_5Vusp/raw/master/JZ5e_5Vusp.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/jian-z513.jpg" title="见证五月十三日" alt="见证五月十三日"><br>见证五月十三日</a><br><a href="https://gitlab.com/szzdlab/vd0iY/raw/master/0iY.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"><br>功夫 寻道</a><br><a href="https://gitlab.com/szzdlab/vdguanguimin/raw/master/guanguimin.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"><br>歌唱家的人生奇迹</a><br><a href="https://gitlab.com/szzdlab/vdmjjy/raw/master/mjjy.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"><br>名校精英的选择</a><br><a href="https://gitlab.com/szzdlab/vdc4rB_QQbr/raw/master/c4rB_QQbr.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"><br>音乐之家的故事</a><br><a href="https://gitlab.com/szzdlab/vdO23c_E/raw/master/O23c_E.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"><br>平凡中的不平凡</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/130/nizhibeituolanlao.jpg" title="善良女士被投男牢"  alt="善良女士被投男牢"><br>善良女士被投男牢</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/130/huozhai1.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"><br>警卫目击中共活摘</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/130/motoumks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"><br>马克思的成魔之路</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/130/konggaojm.jpg" title="303万人的举报"  alt="303万人的举报"><br>303万人的举报</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/130/lianganduibi.jpg" title="海峡两岸强烈反差"  alt="海峡两岸强烈反差"><br>海峡两岸强烈反差</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"><br>印度媒体报道东方</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/130/xuejiao.jpg" title="不一样的海外校园"  alt="不一样的海外校园"><br>不一样的海外校园</a><br>
-<tr><td VALIGN=middle width="370"><div align="center"><h2><a href="http://220.141.43.145/UmhjM">我要退出中共的党团队</a></h2>昨日三退人数: 45,927</div><br></td><td VALIGN=middle width="371"><h3 align="center"><strong align="center">
+<tr><td VALIGN=middle width="370"><div align="center"><h2><a href="http://D site IP/UmhjM">我要退出中共的党团队</a></h2>昨日三退人数: 45,927</div><br></td><td VALIGN=middle width="371"><h3 align="center"><strong align="center">
 
 ```diff
 !退出中共党、团、队总人数:
 
-!共 382,961,175 人
+!共 382,961,384 人
 ```
-</strong></h3></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>中国人权</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/31/n13201150.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2021/09/id13201338-001-320x200.jpeg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/31/n13201150.md#1">不当中共殉葬品 广东男子退出共青团</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/1/n13202734.md#1">维稳还是整人？北京访民冯丽志被丢到青海</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/31/n13199374.md#1">【独家】面对法轮功 610主任自曝信心不足</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/31/n13200763.md#1">监狱强迫法轮功学员张继红截肢 其妻拒绝</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/31/n13201306.md#1">在京遭暴力截访 湖北访民：连犯人都不如</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/31/n13199608.md#1">山东当局耍手段 访民苏士芹被夫劝返后遭拘留</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid278.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>中国经济</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/3/n13207065.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2019/09/1304011003272519-600x400-320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/3/n13207065.md#1">穆迪将中国房地产行业展望下调为负面</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/1/n13203707.md#1">北京中产讲述心酸购房史：承德买房一场空</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/3/n13206642.md#1">中诚信下调恒大地产主体及债项信用等级至AA</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/2/n13206427.md#1">中国调味品龙头海天味业市值数月蒸发3033亿</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/2/n13206020.md#1">就太阳能板和中共在世贸交锋 美国获胜</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/2/n13205353.md#1">传蚂蚁让步 拟将消费者数据主控权给国企</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid283.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>大陆政治</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/3/n13207643.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2021/09/id13207759-2109030419512378-320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/3/n13207643.md#1">自由多元远胜孔子学院 台湾华语中心在美揭幕</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/3/n13206611.md#1">何良懋：中共籍整顿影视界 隔绝西方影响</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/3/n13207190.md#1">日本宣布赠台第四批AZ疫苗 台湾：诚挚感谢</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/3/n13206867.md#1">涉2015股灾被查 证监会前主席助理张育军去世</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/3/n13207041.md#1">吴钊燮：中共文攻武吓日增 台湾不会屈服</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/2/n13206547.md#1">中共与塔利班交好 白宫这样回应</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid277.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>天灾人祸</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/2/n13204876.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2021/09/id13205044-FotoJet-45365635-456-320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/2/n13204876.md#1">太原江阳化工厂发生爆炸 附近房屋玻璃震碎</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/1/n13202532.md#1">湖北黄石面包车撞上重型货车 致4死7伤</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/1/n13202378.md#1">湖南市民拒绝打疫苗 被警方强押到医院接种</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/1/n13201698.md#1">云南一辆轿车突然起火 两幼儿不幸遇难</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/1/n13201544.md#1">山东滨州发生两宗炭疽病例 14岁学生染疫亡</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/31/n13199944.md#1">视频：青岛暴雨城区淹水 景区水势汹涌</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid280.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>社会万象</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/3/n13207138.md#1"><img width="320" align ="left" src="https://www.epochtimes.com/assets/themes/djy/images/djy_post_default_featured_image_320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/3/n13207138.md#1">高晓松脱口秀被下架 又一阿里系名人陷麻烦</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/3/n13207013.md#1">【前线采访】大陆网红李子柒火红后 衍生的利益</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/2/n13206555.md#1">孙俪眼球凸出遭疑得甲亢 网民：证明没医美</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/2/n13204656.md#1">大陆开学日 网民调侃：学校围墙“长满家长”</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/1/n13202865.md#1">组图：上海出现病例 居民排队接受病毒检测</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/1/n13202315.md#1">中共官方刊登五千字长文批郎平 引发争议</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid282.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>科教文化</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/31/n13200988.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2021/08/id13180002-GettyImages-1234304748@1200x1200-320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/31/n13200988.md#1">中共“双减”政策惹议 学者：违反教育规律</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/30/n13198040.md#1">习近平要求防范民族风险 分析：中共要控制所有人</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/28/n13194436.md#1">【财商天下】英语下架 文革2.0</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/28/n13194291.md#1">中共禁民办学校 学者：控制思想 掠夺财富</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/24/n13185119.md#1">约翰霍普金斯大学修改规定 不认可中国疫苗</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/20/n13177079.md#1">拍《尚气》与梁朝伟合作 刘思慕直呼美梦成真</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid281.md#1">更多......</a></p></td></tr>
+</strong></h3></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>中国人权</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/31/n13201150.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2021/09/id13201338-001-320x200.jpeg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/31/n13201150.md#1">不当中共殉葬品 广东男子退出共青团</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/1/n13202734.md#1">维稳还是整人？北京访民冯丽志被丢到青海</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/31/n13199374.md#1">【独家】面对法轮功 610主任自曝信心不足</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/31/n13200763.md#1">监狱强迫法轮功学员张继红截肢 其妻拒绝</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/31/n13201306.md#1">在京遭暴力截访 湖北访民：连犯人都不如</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/31/n13199608.md#1">山东当局耍手段 访民苏士芹被夫劝返后遭拘留</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid278.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>中国经济</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/3/n13207731.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2021/07/id13119706-GettyImages-1229450929-320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/3/n13207731.md#1">A股震荡收跌 沪深两市成交破1.5万亿元</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/3/n13207065.md#1">穆迪将中国房地产行业展望下调为负面</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/1/n13203707.md#1">北京中产讲述心酸购房史：承德买房一场空</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/3/n13206642.md#1">中诚信下调恒大地产主体及债项信用等级至AA</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/2/n13206427.md#1">中国调味品龙头海天味业市值数月蒸发3033亿</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/2/n13206020.md#1">就太阳能板和中共在世贸交锋 美国获胜</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid283.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>大陆政治</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/3/n13207643.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2021/09/id13207759-2109030419512378-320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/3/n13207643.md#1">自由多元远胜孔子学院 台湾华语中心在美揭幕</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/3/n13206611.md#1">何良懋：中共籍整顿影视界 隔绝西方影响</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/3/n13207190.md#1">日本宣布赠台第四批AZ疫苗 台湾：诚挚感谢</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/3/n13206867.md#1">涉2015股灾被查 证监会前主席助理张育军去世</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/3/n13207041.md#1">吴钊燮：中共文攻武吓日增 台湾不会屈服</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/2/n13206547.md#1">中共与塔利班交好 白宫这样回应</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid277.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>天灾人祸</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/2/n13204876.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2021/09/id13205044-FotoJet-45365635-456-320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/2/n13204876.md#1">太原江阳化工厂发生爆炸 附近房屋玻璃震碎</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/1/n13202532.md#1">湖北黄石面包车撞上重型货车 致4死7伤</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/1/n13202378.md#1">湖南市民拒绝打疫苗 被警方强押到医院接种</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/1/n13201698.md#1">云南一辆轿车突然起火 两幼儿不幸遇难</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/1/n13201544.md#1">山东滨州发生两宗炭疽病例 14岁学生染疫亡</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/31/n13199944.md#1">视频：青岛暴雨城区淹水 景区水势汹涌</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid280.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>社会万象</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/3/n13207138.md#1"><img width="320" align ="left" src="https://www.epochtimes.com/assets/themes/djy/images/djy_post_default_featured_image_320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/3/n13207138.md#1">高晓松脱口秀被下架 又一阿里系名人陷麻烦</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/3/n13207013.md#1">【前线采访】大陆网红李子柒火红后 衍生的利益</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/2/n13206555.md#1">孙俪眼球凸出遭疑得甲亢 网民：证明没医美</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/2/n13204656.md#1">大陆开学日 网民调侃：学校围墙“长满家长”</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/1/n13202865.md#1">组图：上海出现病例 居民排队接受病毒检测</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/1/n13202315.md#1">中共官方刊登五千字长文批郎平 引发争议</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid282.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>科教文化</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/31/n13200988.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2021/08/id13180002-GettyImages-1234304748@1200x1200-320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/31/n13200988.md#1">中共“双减”政策惹议 学者：违反教育规律</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/30/n13198040.md#1">习近平要求防范民族风险 分析：中共要控制所有人</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/28/n13194436.md#1">【财商天下】英语下架 文革2.0</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/28/n13194291.md#1">中共禁民办学校 学者：控制思想 掠夺财富</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/24/n13185119.md#1">约翰霍普金斯大学修改规定 不认可中国疫苗</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/20/n13177079.md#1">拍《尚气》与梁朝伟合作 刘思慕直呼美梦成真</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid281.md#1">更多......</a></p></td></tr>
 <tr><td VALIGN=TOP width="370"><h2><p><strong>独家视角</strong></p></h2><a href="https://github.com/zeqdou3554/djy/blob/master/gb/21/8/26/n13188642.md#1">【独家】辽宁文件泄中共在网络领域抹黑西方</a><br>
 <a href="https://github.com/zeqdou3554/djy/blob/master/gb/21/8/24/n13183636.md#1">【独家】文件泄辽宁收集在华韩国人活动轨迹</a><br>
 <a href="https://github.com/zeqdou3554/djy/blob/master/gb/21/8/20/n13174730.md#1">【独家】中共建“规章制度”迫害法轮功</a><br>
 <a href="https://github.com/zeqdou3554/djy/blob/master/gb/21/8/19/n13173977.md#1">【独家】文件泄朝鲜枪击中国渔民 扣渔船</a><br>
 <a href="https://github.com/zeqdou3554/djy/blob/master/gb/21/8/16/n13165115.md#1">分析：粮食进口激增 中共囤粮备战？</a><br>
 <a href="https://github.com/zeqdou3554/djy/blob/master/gb/21/8/13/n13158773.md#1">分析：习近平伸出干预市场的第三只手</a><br>
-<br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nf6092.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>传统文化</strong></p></h2><a href="https://github.com/zeqdou3554/djy/blob/master/gb/21/8/15/n13163974.md#1">【馨香雅句】疗愈身心的芳香 看古人的芳香生活</a><br>
+<br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nf6092.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>传统文化</strong></p></h2><a href="https://github.com/zeqdou3554/djy/blob/master/gb/21/8/21/n13178801.md#1">唐太宗怎么教太子平天下？（2）</a><br>
+<a href="https://github.com/zeqdou3554/djy/blob/master/gb/21/9/2/n13205792.md#1">【未解之谜】 不会中文会唱歌 邓丽君归来？</a><br>
+<a href="https://github.com/zeqdou3554/djy/blob/master/gb/21/8/15/n13163974.md#1">【馨香雅句】疗愈身心的芳香 看古人的芳香生活</a><br>
 <a href="https://github.com/zeqdou3554/djy/blob/master/gb/21/6/3/n12995616.md#1">【金色种子】最早认识法轮功的台湾校园：台大</a><br>
 <a href="https://github.com/zeqdou3554/djy/blob/master/gb/21/9/2/n13203930.md#1">【古韵流芳】《青玉案·元夕》千古传唱的经典</a><br>
 <a href="https://github.com/zeqdou3554/djy/blob/master/gb/21/8/13/n13159812.md#1">西方史上极著名的灵魂归来事件(2) 还阳复生完成任务</a><br>
-<a href="https://github.com/zeqdou3554/djy/blob/master/gb/21/8/31/n13200702.md#1">【未解之谜】双胞胎神奇的心灵感应</a><br>
-<a href="https://github.com/zeqdou3554/djy/blob/master/gb/21/8/31/n13199686.md#1">畅游18世纪舞台传奇 比比恩纳家族的剧场设计</a><br>
 <br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/news2007.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>九评共产党</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/4/11/19/n722529.md#1" target="_blank">【一】评共产党是什么</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/4/11/21/n723946.md#1" target="_blank">【二】评中国共产党是怎样起家的</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/4/11/23/n725597.md#1" target="_blank">【三】评中国共产党的暴政</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/4/11/25/n727814.md#1" target="_blank">【四】评共产党是反宇宙的力量</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/4/11/27/n730058.md#1" target="_blank">【五】评江泽民与中共相互利用迫害法轮功</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/4/11/29/n731667.md#1" target="_blank">【六】评中国共产党破坏民族文化</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/4/12/1/n733806.md#1" target="_blank">【七】评中国共产党的杀人历史</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/4/12/3/n735942.md#1" target="_blank">【八】评中国共产党的邪教本质</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/4/12/4/n737542.md#1" target="_blank">【九】评中国共产党的流氓本性</a></td><td VALIGN=TOP width="371"><h2><p><strong>大纪元重要书籍</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nf3541.md#1" target="_blank">《九评共产党》</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nf1235328.md#1" target="_blank">《共产主义的终极目的》</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nf1267582.md#1" target="_blank">《魔鬼在统治着我们的世界》</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nf3628.md#1" target="_blank">《解体党文化》</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nf1242535.md#1" target="_blank">《真实的江泽民》</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nf1138304.md#1" target="_blank">《中国历史正述》</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nf1076978.md#1" target="_blank">《千古英雄人物》</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nf3046.md#1">更多......</a></p></td></tr></table><div align="center"><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/brkhkd3127/djy/blob/master/gb/nf1351518.md#1<br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nf1351518.md#1"><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/brkhkd3127/djy/blob/master/gb/nf1351518.md%231" title="分享本文章"></a><br>原文地址： <a href="https://www.epochtimes.com/gb/nf1351518.htm">https://www.epochtimes.com/gb/nf1351518.htm</a>    （国内需<a href="https://github.com/brkhkd3127/www/blob/master/README.md#8">下载翻墙软件</a>才能访问）</div>
